# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  app.py  config.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  quality.sh
